--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ repositories {
 dependencies {
   compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
   compile "org.seleniumhq.selenium:selenium-api:$seleniumVersion"
-  compile "org.seleniumhq.selenium:selenium-chrome-driver:$seleniumVersion"
+  compile "org.seleniumhq.selenium:selenium-firefox-driver:$seleniumVersion"
   compile "org.seleniumhq.selenium:selenium-support:$seleniumVersion"
   compile 'org.slf4j:slf4j-api:1.7.21'
 
