--- a/build.gradle
+++ b/build.gradle
@@ -5,41 +5,42 @@ buildscript {
   }
 
   dependencies {
-    classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.0.2'
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+    classpath "org.junit.platform:junit-platform-gradle-plugin:$jUnitPluginVersion"
   }
 }
 /* ***************************************************************************/
 
 /* ***************************************************************************/
-apply plugin: 'kotlin'
+apply plugin: "kotlin"
+apply plugin: 'org.junit.platform.gradle.plugin'
 /* ***************************************************************************/
 
 /* ***************************************************************************/
-ext {
-  htmlUnitVersion = '2.21'
-  kotlinVersion = '1.0.2'
-  seleniumVersion = '2.53.0'
-  spekVersion = '1.0.25'
+junitPlatform {
+  filters {
+    engines {
+      include 'spek'
+    }
+  }
 }
 /* ***************************************************************************/
 
 /* ***************************************************************************/
 repositories {
   jcenter()
-
-  maven {
-    url "http://repository.jetbrains.com/all"
-  }
 }
 
 dependencies {
-  compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
+  compile "org.jetbrains.kotlin:kotlin-stdlib$jdkVersion:$kotlinVersion"
+  compile "org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion"
   compile "org.seleniumhq.selenium:selenium-api:$seleniumVersion"
   compile "org.seleniumhq.selenium:selenium-firefox-driver:$seleniumVersion"
   compile "org.seleniumhq.selenium:selenium-support:$seleniumVersion"
-  compile 'org.slf4j:slf4j-api:1.7.21'
+  compile "org.slf4j:slf4j-api:$slf4jVersion"
 
-  testCompile "org.jetbrains.spek:spek:$spekVersion"
-  testCompile "org.seleniumhq.selenium:htmlunit-driver:$htmlUnitVersion"
+  testCompile "org.jetbrains.spek:spek-api:$spekVersion"
+  testCompile "org.jetbrains.spek:spek-junit-platform-engine:$spekVersion"
+  testCompile "org.seleniumhq.selenium:htmlunit-driver:$htmlUnitDriverVersion"
 }
 /* ***************************************************************************/
