Replace the Groovy based build file by a Kotlin based one
Additionally, update the dependencies and update the imports.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
-htmlUnitDriverVersion = 2.26
-jUnitPluginVersion = 1.0.0-M4
-jdkVersion = -jre8
-kotlinVersion = 1.1.2-2
-seleniumVersion = 3.4.0
-slf4jVersion = 1.7.25
-spekVersion = 1.1.2
+htmlUnitDriverVersion = 2.27
+jupiterVersion = 5.0.0
+jvmTargetVersion = 1.8
+kotlinStdLib = stdlib-jre8
+seleniumVersion = 3.6.0
+slf4jVersion =	1.7.25
+spekVersion = 1.1.5
