Integrate bintray for publishing artifacts

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,8 @@ htmlUnitDriverVersion = 2.26
 jupiterVersion = 5.0.0
 jvmTargetVersion = 1.8
 kotlinStdLib = stdlib-jre8
+projectDescription = Balin is a browser automation library for Kotlin. It's basically a Selenium-WebDriver wrapper library inspired by Geb.
+projectVersion = 9999
 seleniumVersion = 3.6.0
 slf4jVersion =	1.7.25
 spekVersion = 1.1.5
