--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
 htmlUnitDriverVersion = 2.26
-jupiterVersion = 5.0.0
+jupiterVersion = 5.1.0
 jvmTargetVersion = 1.8
-kotlinStdLib = stdlib-jre8
+kotlinStdLib = stdlib-jdk8
 projectDescription = Balin is a browser automation library for Kotlin. It's basically a Selenium-WebDriver wrapper library inspired by Geb.
 projectVersion = 9999
-seleniumVersion = 3.6.0
+seleniumVersion = 3.10.0
 slf4jVersion =	1.7.25
 spekVersion = 1.1.5
