--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
 # Gradle
 .gradle
-build/
-out/
 
 # Idea
 .idea
 *.iml
+
+# Compiled code
+build/
+out/
 
 # Generated code
 /src/generated
@@ -13,3 +15,4 @@ gradle.ktscfg.xml
 
 # Allure
 .allure/
+allure-results/
