--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,12 @@
 allureVersion = 2.6.0
-htmlUnitDriverVersion = 2.26
+htmlUnitDriverVersion = 2.30.0
 jvmTargetVersion = 1.8
 kotlinStdLib = stdlib-jdk8
 projectDescription = Balin is a browser automation library for Kotlin. It's basically a Selenium-WebDriver wrapper library inspired by Geb.
+projectGroup = com.github.epadronu
+projectName = balin
+projectRepository = https://github.com/EPadronU/balin.git
 projectVersion = 0.2.0
-seleniumVersion = 3.10.0
-slf4jVersion =	1.7.25
+seleniumVersion = 3.11.0
+slf4jVersion = 1.7.25
 testNgVersion = 6.14.3
