Include logback into the dependencies

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,7 @@ allureVersion = 2.7.0
 htmlUnitDriverVersion = 2.32.0
 jvmTargetVersion = 1.8
 kotlinStdLib = stdlib-jdk8
+logbackVersion = 1.2.3
 projectDescription = Balin is a browser automation library for Kotlin. It's basically a Selenium-WebDriver wrapper library inspired by Geb.
 projectGroup = com.github.epadronu
 projectName = balin
