--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 allureVersion = 2.7.0
-htmlUnitDriverVersion = 2.32.0
+detektVersion = 1.0.0-RC11
+htmlUnitDriverVersion = 2.33.3
 jvmTargetVersion = 1.8
 kotlinStdLib = stdlib-jdk8
 logbackVersion = 1.2.3
@@ -8,6 +9,6 @@ projectGroup = com.github.epadronu
 projectName = balin
 projectRepository = https://github.com/EPadronU/balin.git
 projectVersion = 0.3.2
-seleniumVersion = 3.14.0
+seleniumVersion = 3.141.59
 slf4jVersion = 1.7.25
 testNgVersion = 6.14.3
