Update Gradle version and dependencies * Update Gradle to version 5.6.1 * Update Kotlin to version 1.3.50 * Update Detekt to version 1.0.1 * Update Allure plugin to version 2.8.1 * Update Allure to version 2.12.1 * Update HtmlUnit driver to version 2.35.0 * Update slf4j to version 1.7.28 * Update TestNg to version 7.0.0

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
-allureVersion = 2.10.0
-detektVersion = 1.0.0-RC14
-htmlUnitDriverVersion = 2.34.0
+allureVersion = 2.12.1
+detektVersion = 1.0.1
+htmlUnitDriverVersion = 2.35.0
 jvmTargetVersion = 1.8
 kotlinStdLib = stdlib-jdk8
 logbackVersion = 1.2.3
@@ -10,5 +10,5 @@ projectName = balin
 projectRepository = https://github.com/EPadronU/balin.git
 projectVersion = 0.4.1
 seleniumVersion = 3.141.59
-slf4jVersion = 1.7.26
-testNgVersion = 6.14.3
+slf4jVersion = 1.7.28
+testNgVersion = 7.0.0
